--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bryzzen-kibador/Satella.git"
+  },
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
