--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,35 +11,21 @@
         "ecmaVersion": 12
     },
     "rules": {
-        "getter-return": "off",
-        "linebreak-style": "off",
-        "no-underscore-dangle": "off",
-        "global-require": "off",
-        "no-unused-vars": "off",
-        "no-param-reassign": "off",
-        "no-console": "off",
-        "max-len": "off",
-        "eqeqeq": "off",
-        "consistent-return": "off",
-        "semi": "off",
-        "no-bitwise": "off",
-        "no-shadow": "off",
-        "quotes": "off",
-        "no-unused-expressions": "off",
-        "no-mixed-operators": "off",
-        "indent": "off",
-        "space-before-blocks": "off",
-        "array-bracket-newline": "off",
-        "arrow-parens": "off",
-        "no-restricted-syntax": "off",
-        "default-case": "off",
-        "eol-last": "off",
-        "spaced-comment": "off",
-        "comma-dangle": "off",
-        "quote-props": "off",
-        "import/no-dynamic-require": "off",
-        "no-unreachable": "off",
-        "object-curly-newline": "off",
-        "keyword-spacing": "off"
+      "no-console": "off",
+      "global-require": "off",
+      "no-eval": "off",
+      "eqeqeq": "off",
+      "no-underscore-dangle": "off",
+      "no-unused-vars": "off",
+      "max-len": "off",
+      "no-param-reassign": "off",
+      "consistent-return": "off",
+      "default-case": "off",
+      "no-shadow": "off",
+      "no-bitwise": "off",
+      "no-mixed-operators": "off",
+      "no-unused-expressions": "off",
+      "no-restricted-syntax": "off",
+      "import/no-dynamic-require": "off"
     }
 }
