--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "satella",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Satella - A wrapper for the Discord API made in JS",
   "main": "index.js",
   "scripts": {},
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^2.6.1",
-    "ws": "^7.4.4"
+    "ws": "^7.4.4",
+    "zlib-sync": "^0.1.7"
   },
   "repository": {
     "type": "git",
