--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "satella",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "description": "Satella - A wrapper for the Discord API made in JS",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "typings": "index.d.ts",
   "keywords": [
     "wrapper",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3"
   }
 }
