--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,29 @@
         "ecmaVersion": 12
     },
     "rules": {
-        
+      "getter-return": "off",
+      "no-underscore-dangle": "off",
+      "global-require": "off",
+      "no-unused-vars": "off",
+      "no-param-reassign": "off",
+      "no-console": "off",
+      "max-len": "off",
+      "consistent-return": "off",
+      "no-bitwise": "off",
+      "no-shadow": "off",
+      "no-eval": "off",
+      "no-unused-expressions": "off",
+      "no-mixed-operators": "off",
+      "space-before-blocks": "off",
+      "array-bracket-newline": "off",
+      "arrow-parens": "off",
+      "no-restricted-syntax": "off",
+      "default-case": "off",
+      "eol-last": "off",
+      "comma-dangle": "off",
+      "quote-props": "off",
+      "import/no-dynamic-require": "off",
+      "object-curly-newline": "off",
+      "keyword-spacing": "off"
     }
 }
